--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@solana/web3.js": "^1.98.2",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
+    "node-fetch": "^3.3.2",
     "zod": "^3.24.4"
   },
   "devDependencies": {
